[package]
name = "aframers"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = [
    "Window",
    "Document",
    "Element",
    "EventTarget",
    "HtmlElement",
    "HtmlHeadElement",
    "HtmlScriptElement",
    "Node",
    "Text"
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

